# MoonCookie

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  mooncookie.lua  tcp-proxy-standalone.lua  tcp-proxy.lua
src/: cookie.c  synAuthentication.lua  synCookie.lua
